Fixed issue with page selector getting cut off on bottom.

--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,7 @@ input:checked + .touchLabel::after {
 	position: fixed;
 	bottom: 0px;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 200px);
 	min-height: 100px;
 	z-index: 1000;
 	margin: 0px;
